<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/userDetailsContentView"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Jake Wharton" />

        <TextView
            android:id="@+id/companyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintStart_toStartOf="@+id/nameTextView"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView"
            tools:text="Square" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_16dp"
            app:cardCornerRadius="@dimen/dimen_16dp"
            app:cardElevation="@dimen/dimen_8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/companyTextView">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dimen_8dp">

                <TextView
                    android:id="@+id/reposCountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    app:layout_constraintEnd_toStartOf="@+id/followersCountTextView"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="50" />

                <TextView
                    android:id="@+id/reposTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:text="@string/repos"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    app:layout_constraintEnd_toEndOf="@id/reposCountTextView"
                    app:layout_constraintStart_toStartOf="@id/reposCountTextView"
                    app:layout_constraintTop_toBottomOf="@+id/reposCountTextView" />

                <TextView
                    android:id="@+id/followersCountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    app:layout_constraintEnd_toStartOf="@+id/followingCountTextView"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/reposCountTextView"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="200" />

                <TextView
                    android:id="@+id/followersTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:text="@string/followers"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    app:layout_constraintEnd_toEndOf="@id/followersCountTextView"
                    app:layout_constraintStart_toStartOf="@id/followersCountTextView"
                    app:layout_constraintTop_toBottomOf="@+id/followersCountTextView" />

                <TextView
                    android:id="@+id/followingCountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/followersCountTextView"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="300" />

                <TextView
                    android:id="@+id/followingTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:text="@string/following"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    app:layout_constraintEnd_toEndOf="@+id/followingCountTextView"
                    app:layout_constraintStart_toStartOf="@+id/followingCountTextView"
                    app:layout_constraintTop_toBottomOf="@+id/followingCountTextView" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <View
            android:id="@+id/line1"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:background="@color/colorGreyLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView" />

        <TextView
            android:id="@+id/aboutTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_4dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/about"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintStart_toStartOf="@+id/line1"
            app:layout_constraintTop_toBottomOf="@+id/line1" />

        <TextView
            android:id="@+id/aboutUserTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/about_me"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintEnd_toEndOf="@+id/line1"
            app:layout_constraintStart_toStartOf="@+id/aboutTv"
            app:layout_constraintTop_toBottomOf="@+id/aboutTv" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
